   abort processing the script immediately. Also the `if ! condition`
   syntax is not supported everywhere (or the `!` operator generally).
   [#3099, #1660]

 - Revised `tools/gitlog2version.sh` helper script with a mode to expand
   NUT SEMVER components into wide zero-padded numbers, so it is easier
   to alphanumerically compare different releases regardless of version
   component lengths in digits (and differences in their amounts).
   Added tests to cover different shell interpreter platforms (piggy-back
   on the `tests/nut-driver-enumerator-test.sh` script), and made sure
   that outputs of legacy-mode processing (with `NUT_VERSION_DEFAULT`
   string provided by caller or saved in a tarball) are consistent with
   git-mode. [issue #3055, PR #3213]

 - The NUT Integration Testing suite (NIT) script, if started as `root`,
   can now consult its run-time situation vs. `BUILTIN_RUN_AS_USER` and
   `BUILTIN_RUN_AS_GROUP` environment variables, and if those accounts
   do not exist (e.g. running in a packaging build root), a different
   value like "nobody" or "nogroup" would be defaulted for tests. [#1209]

 - Fixed man page naming for `nutdrv_siemens-sitop(.8)` (dash vs. underscore)
   to match the driver program name. Follow-up from slightly botched renaming
   in original contribution. [PR #545]

 - The `configure` script should now try harder to report specifically
   the "purelib" location as `PYTHON*_SITE_PACKAGES`. [#1209]

 - Introduce `make distcheck-completeness` goal to verify that our distribution
   archives can exactly reproduce themselves. [#2829]

 - Upstreamed reference packaging recipes (DEB, RPM) from the 42ITy project
   which can be used with OBS (Open Build Service by SUSE), both to support
   end-user testing of NUT development, and to have a yet another NUT CI farm
   player with a distinct opinion on code quality. Many of the changes listed
   above happened thanks to this effort, and due to concerns raised by OBS